Tidy up initialization data.

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -22,11 +22,11 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.import.system.data=false
+startup.import.system.data=true
 
-startup.workflow.initialize=false
-startup.display.initialize=false
-startup.display.initialize.drop=false
+startup.workflow.initialize=true
+startup.display.initialize=true
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
@@ -74,7 +74,6 @@ system.default.email.content.directory=email/content/
 # INTEGRATIONS
 # -----------------------------------------------------------------------------
 integration.google.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
-integration.google.geocoding.code.import.data=true
 integration.google.places.api.uri=https://maps.googleapis.com/maps/api/place/details/
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
