--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -82,7 +82,7 @@ system.default.email.content.directory=email/content/
 # INTEGRATIONS
 # -----------------------------------------------------------------------------
 integration.google.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
-integration.google.geocoding.code.import.data=false
+integration.google.places.api.uri=https://maps.googleapis.com/maps/api/place/details/
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
