--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -22,16 +22,16 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.import.system.data=true
+startup.import.system.data=false
 
-startup.workflow.initialize=true
-startup.display.initialize=true
-startup.display.initialize.drop=true
+startup.workflow.initialize=false
+startup.display.initialize=false
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
