--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -66,6 +66,7 @@ system.helpdesk=http://uclprism.freshdesk.com/
 system.user.firstName=Alumeni
 system.user.lastName=PRiSM
 system.user.email=prism-local@alumeni.co.uk
+system.minimum.wage=6.50
 
 system.default.email.subject.directory=email/subject/
 system.default.email.content.directory=email/content/
