Updated other context configurations.

--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -74,6 +74,7 @@ system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=Alumeni
 system.user.lastName=PRiSM
 system.user.email=prism-test@alumeni.co.uk
+system.minimum.wage=6.50
 
 system.default.email.subject.directory=email/subject/
 system.default.email.content.directory=email/content/
