--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -26,7 +26,7 @@ startup.import.system.data=false
 
 startup.workflow.initialize=true
 startup.display.initialize=true
-startup.display.initialize.drop=false
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
