--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -24,14 +24,14 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.import.system.data=false
 
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.display.initialize=true
 startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
