--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -25,8 +25,8 @@ email.source=prism-uat-no-reply@alumeni.co.uk
 startup.import.system.data=false
 
 startup.workflow.initialize=true
-startup.display.initialize=false
-startup.display.initialize.drop=false
+startup.display.initialize=true
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
