--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -18,6 +18,7 @@ context.environment=dev
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.source=prism-local-no-reply@local.alumeni.co.uk
+email.strategy=log
 
 # -----------------------------------------------------------------------------
 # START-UP
