--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -18,6 +18,7 @@ context.environment=prod
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.source=prism-no-reply@alumeni.co.uk
+email.strategy=none
 
 # -----------------------------------------------------------------------------
 # START-UP
