Conjunto de cambios retirado: caa2a062914a

--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -7,7 +7,7 @@ application.api.url=https://www.prism.ucl.ac.uk/prism/api
 # -----------------------------------------------------------------------------
 # DATABASE SETTINGS
 # -----------------------------------------------------------------------------
-data.source=java:jboss/datasources/prism
+data.source=java:jboss/datasources/pgadmissions
 
 # -----------------------------------------------------------------------------
 # CONTEXT
