--- a/pom.xml
+++ b/pom.xml
@@ -398,21 +398,12 @@
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>1.1.0.Alpha1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>deploy-artifact</goal>
-                        </goals>
-                        <configuration>
-                            <groupId>com.zuehlke</groupId>
-                            <artifactId>prism</artifactId>
-                            <name>prism.war</name>
-                        </configuration>
-                    </execution>
-                </executions>
                 <configuration>
                     <id>wildfly-prod</id>
                     <port>${wildfly.management.port}</port>
+                    <groupId>com.zuehlke</groupId>
+                    <artifactId>prism</artifactId>
+                    <name>prism.war</name>
                 </configuration>
             </plugin>
 
@@ -565,6 +556,7 @@
             <properties>
                 <sql.host>localhost</sql.host>
                 <sql.db>pgadmissions</sql.db>
+                <wildfly.management.port>666</wildfly.management.port>
             </properties>
         </profile>
 
