--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,17 @@
 							<goal>xjc</goal>
 						</goals>
 						<configuration>
+							<packageName>com.zuehlke.pgadmissions.referencedata.jaxb.resource</packageName>
+							<outputDirectory>${project.build.directory}/generated-sources/jaxb/import/resource</outputDirectory>
+							<schemaDirectory>${project.basedir}/src/main/resources/xsd/import/resource</schemaDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>xjc-5</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+						<configuration>
 							<packageName>com.zuehlke.pgadmissions.admissionsservice.jaxb</packageName>
 							<outputDirectory>${project.build.directory}/generated-sources/jaxb/export</outputDirectory>
 							<schemaDirectory>${project.basedir}/src/main/resources/xsd/export</schemaDirectory>
